# SnapShare-API

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.koyeb  LICENSE  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  test.db  unittest_comment
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 00353fc5127d_initial_tables.py  04b911e6f5bc_update_releationships.py  1b9e40521fcd_initial_tables.py  2081c2ed7236_init.py  304f7217325c_added_ratings_table.py  3144409c7459_initial_tables.py  338b062e7d4c_added_ban_status_to_user.py  344190884b0b_init.py  345e98dd0ff9_init.py  3e8d79d49f51_init.py  50a9907d9c05_update_releationships.py  5103728f749c_added_ratings_table.py  598fdb28f2ae_initial_tables.py  5e4df12a1bf1_initial_tables.py  641aa3638987_added_blacklist_table.py  64acdff0bbd2_init.py  68ea8d97ed1b_instead_back_populates_of_backref.py  6aa27e631786_init.py  7525bfd0b2a5_update_releationships.py  78c40813d1a8_adedd_rating_releationships.py  8836361e6c9d_added_releationships.py  9108b32cd233_update_releationships.py  939bf6f9573a_added_rating_rable.py  945a85783c80_deleted_uploaded_column.py  97e96edc1e33_.py  a54d54717efa_init.py  b28bc50e2b55_init.py  b33c67e9c46e_update_releationships2.py  b57b01b7efe9_added_blacklists_table.py  be177e22a6b4_initial_tabels.py  bf90276d11f8_instead_backref_of_back_populates.py  dae66b82fded_added_blacklist_table.py  ddac46760df6_rename_image_counter.py  e015f10445f7_init.py  e15b47a6bcab_init.py  e34fe21f956c_update_releationships.py  e92c0da0f49c_initial_tables.py  f2ac1507b9f9_update_releationships.py  f63ccb5d457a_added_comments_releationships.py  fd72d5f99893_init.py  (+2 more)
postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/conf/: config.py
src/database/: blacklist.py  db.py
src/models/: base.py  blacklist.py  comment.py  image.py  photo.py  rating.py  user.py
src/repository/: comments.py  images.py  photos.py  ratings.py  search.py  search_filter.py  tags.py  users.py
src/routes/: auth.py  comments.py  images.py  photos.py  ratings.py  search.py  search_filter.py  tags.py  users.py
src/schemas/: comment.py  image.py  photo.py  rating.py  tag.py  user.py
src/services/: auth_service.py  email_service.py  roles.py
src/utils/: image_utils.py  qr_code.py
tests/: conftest.py  test.db  test_blacklist.py  test_data_func.py  test_route_auth.py  test_route_logout.py  test_routes_user.py  test_unit_repository_photos.py  test_unit_repository_user.py  test_unit_repository_users.py  test_unit_routes_user.py  test_unit_tags.py  unittest_comment  unittest_repository_comment  unittest_routes_comment.py
tests/comments/: test_repository_comments.py  test_routes_comments.py  test_unit_repository_comment.py  test_unit_routes_comment.py
tests/db/: test_unit_db.py
tests/images/: conftest.py  test_data_func.py  test_route_images.py  test_route_images_transformation.py  test_unit_repository_images.py  test_unit_repository_photos.py  test_unit_tags.py  test_utils_image.py
tests/main/: test_unit_main.py
tests/photos/: conftest.py  test_data_func.py  test_route_photos.py  test_unit_repository_photos.py  test_unit_tags.py
tests/ratings/: conftest.py  test_avg_rating.py  (+9 more)
(+17 files in other folders)
